third_party/blink/web_tests/platform/generic/http/tests/inspector-protocol/fetch/service-worker-classic-initial-network-id-disallowed-response-code-expected.txt
Tests Service Worker (classic) Initial Registration emits Network Events for disallowed response code
==== INITIAL service worker request ====
Registration Result: FAILURE: TypeError: Failed to register a ServiceWorker for scope ('http://127.0.0.1:8000/inspector-protocol/fetch/resources/service-workers/') with script ('http://127.0.0.1:8000/inspector-protocol/fetch/resources/service-workers/worker.php?response_code=400'): A bad HTTP response code (400) was received when fetching the script.
requestWillBeSent url: http://127.0.0.1:8000/inspector-protocol/fetch/resources/service-workers/worker.php?response_code=400
responseReceived status: 400
requestIds match: true

